[gd_scene load_steps=6 format=3 uid="uid://detq4jo62q0nu"]

[ext_resource type="Script" uid="uid://tdp3rbhhl8km" path="res://scripts/full_game.gd" id="1_0mt7r"]
[ext_resource type="PackedScene" uid="uid://c8kpjbl40w43m" path="res://scenes/game.tscn" id="1_k4mkr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0mt7r"]
bg_color = Color(0.691357, 0.691357, 0.691357, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_537tr"]
bg_color = Color(0.489622, 0.489622, 0.489622, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n8mwf"]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="FullGame" type="Node2D"]
script = ExtResource("1_0mt7r")

[node name="GameContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Game" parent="GameContainer" instance=ExtResource("1_k4mkr")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="GameOverControl" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayAgainButton" type="Button" parent="CanvasLayer/GameOverControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -33.5
offset_right = 118.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
theme_override_styles/hover = SubResource("StyleBoxFlat_0mt7r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_537tr")
theme_override_styles/normal = SubResource("StyleBoxFlat_n8mwf")
text = "Play again"

[connection signal="lost" from="GameContainer/Game" to="." method="_on_game_lost"]
[connection signal="pressed" from="CanvasLayer/GameOverControl/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
